@@ -2,6 +2,7 @@
 v6.1.0-git
 ----------
 
+[mms] Improved autocompleter in smartmobile compose view.
 [mms] Add saving compose drafts in smartmobile view.
 [mms] Rename 'compose_attach' hook as 'compose_attachment'.
 [mms] Honor forward_default preference in smartmobile view.
